finished and renamed anaele_preprocessing_mediapipe.ipynb

--- a/anaele_preprocessing_mediapipe.ipynb
+++ b/anaele_preprocessing_mediapipe.ipynb
@@ -821,7 +821,11 @@
      "output_type": "stream",
      "text": [
       "100\n",
-      "1000\n"
+      "1000\n",
+      "5000\n",
+      "10000\n",
+      "15000\n",
+      "20000\n"
      ]
     }
    ],
@@ -2399,6 +2403,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## !!! SPLIT IN STARTER NOTEBOOK NOT BALANCES AMONG DATABASES !!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2606,6 +2617,8 @@
     }
    ],
    "source": [
+    "# train after split df_train[20000:]\n",
+    "#-----------------------------------\n",
     "stats_20000_plus = df_train[20000:].groupby('db_number')['count','color','no_color'].sum()\n",
     "# add a row with sum of each columns\n",
     "stats_20000_plus.loc['total'] = stats_20000_plus.sum()\n",
@@ -2616,10 +2629,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# validaton set after split df_train[:20000]\n",
+    "stats_20000_less = df_train[20000:].groupby('db_number')['count','color','no_color'].sum()\n",
+    "stats_20000_less['no_color_%'] = stats_20000_less['no_color'] / stats_20000_less['count'] * 100"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create \"stratification label\" for Train test split"
+    "## Solution : stratified Train_test_split() on synthtic variable\n",
+    "Creation of a \"stratification label\" with database, gender and color<br>\n",
+    "for example :<br>\n",
+    " - 2 0 1 = 2nd database + female + color image<br>\n",
+    " - 1 1 0 = 1st database + male + grayscale image"
    ]
   },
   {
@@ -2766,7 +2794,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "df_train['stratification'] = 100 * df_train['db_number'] + 10 * df_train['gender_id'] + df_train['color']\n",
-    "df_train[['db_number','gender_id','color','stratification']].head(-5)"
+    "df_train[['db_number','gender_id','color','stratification']].head(-5)\n",
+    "\n",
+    "# save dataframe\n",
+    "with open('Data/Mediapipe/df_train.pkl', 'wb') as f: pickle.dump(df_train, f)"
    ]
   },
   {
@@ -2940,6 +2971,28 @@
     "df['train_%'] = np.round(df['train'] / df['all_train'] * 100,2)\n",
     "df['val_%'] = np.round(df['val'] / df['all_train'] * 100,2)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save train and val dataframes\n",
+    "with open('train.pkl', 'wb') as f: pickle.dump(train, f)\n",
+    "with open('val.pkl', 'wb') as f: pickle.dump(val, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load train and val dataframes\n",
+    "with open('train.pkl', 'rb') as f: train = pickle.load(f)\n",
+    "with open('val.pkl', 'rb') as f: val = pickle.load(f)"
    ]
   },
   {
