--- a/anaele_preprocessing_mediapipe.ipynb
+++ b/anaele_preprocessing_mediapipe.ipynb
@@ -2066,7 +2066,8 @@
     "    print('Images already processed.\\nSet test_preprocess to \"True\" to process all the images')   \n",
     "    # Load the dataframe and the no_face_indices\n",
     "    with open('Data/Mediapipe/df_test.pkl', 'rb') as f: df_test = pickle.load(f)\n",
-    "    with open('Data/Mediapipe/test_no_face_indices.pkl', 'rb') as f: no_face_indices_test = pickle.load(f)\n",
+    "    with open('Data/Mediapipe/test_no_face_indices.pkl', 'rb') as f:\n",
+    "        no_face_indices_test = pickle.load(f)\n",
     "    print(\"df_test and no_face_indices_test are loaded\")  "
    ]
   },
@@ -3136,7 +3137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution : stratified Train_test_split() on synthtic variable\n",
+    "## Solution : stratified Train_test_split() on synthetic variable\n",
     "Creation of a \"stratification label\" with database, gender and color<br>\n",
     "for example :<br>\n",
     " - 2 0 1 = 2nd database + female + color image<br>\n",
@@ -3374,18 +3375,6 @@
    "display_name": "Python WSL (myenv)",
    "language": "python",
    "name": "myenv"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
   }
  },
  "nbformat": 4,
