Sauvegarde des modifications locales dans data2.ipynb

--- a/data2.ipynb
+++ b/data2.ipynb
@@ -879,7 +879,7 @@
     "\n",
     "\n",
     "range_weights = {label: total_samples / count for label, count in range_counts.items()}\n",
-    "print(range_weights)\n"
+    "print(range_weights)"
    ]
   },
   {
