improved visualisation of pixels distribution for db1 db2 db3 and color/grayscale images

--- a/anaele_exploration_distribution.ipynb
+++ b/anaele_exploration_distribution.ipynb
@@ -1273,6 +1273,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_w_color_df['mean'] = res_w_color_df[['mean_R','mean_G','mean_B']].mean(axis=1)\n",
+    "res_m_color_df['mean'] = res_m_color_df[['mean_R','mean_G','mean_B']].mean(axis=1)\n",
+    "res_w_gray_df['mean'] = res_w_gray_df[['mean_R','mean_G','mean_B']].mean(axis=1)\n",
+    "res_m_gray_df['mean'] = res_m_gray_df[['mean_R','mean_G','mean_B']].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
    "outputs": [
@@ -1322,8 +1334,11 @@
     "    res = res_df.iloc[:5,:] # take only first 5 occlusion levels\n",
     "    plt.figure(figsize=(8,2.5))\n",
     "    \n",
+    "    # all channels\n",
+    "    plt.subplot(1,4,1)\n",
+    "\n",
     "    # red channel\n",
-    "    plt.subplot(1,3,1)\n",
+    "    plt.subplot(1,4,1)\n",
     "    plt.plot(res['occ_level'], res['mean_R'], color='r', marker='o', label='mean_R')\n",
     "    plt.fill_between(res['occ_level'], res['mean_R']-res['std_R'], res['mean_R']+res['std_R'], color='r', alpha=0.3, label='std_R')\n",
     "    plt.title('Red channel')\n",
@@ -1334,7 +1349,7 @@
     "    plt.grid(axis='y', linestyle='--', linewidth=0.7)\n",
     "\n",
     "    # green channel\n",
-    "    plt.subplot(1,3,2)\n",
+    "    plt.subplot(1,4,2)\n",
     "    plt.plot(res['occ_level'], res['mean_G'], color='g', marker='o', label='mean_G')\n",
     "    plt.fill_between(res['occ_level'], res['mean_G']-res['std_G'], res['mean_G']+res['std_G'], color='g', alpha=0.3, label='std_G')\n",
     "    plt.title('Green channel')\n",
@@ -1345,7 +1360,7 @@
     "    plt.grid(axis='y', linestyle='--', linewidth=0.7)\n",
     "\n",
     "    # blue channel\n",
-    "    plt.subplot(1,3,3)\n",
+    "    plt.subplot(1,4,3)\n",
     "    plt.plot(res['occ_level'], res['mean_B'], color='b', marker='o', label='mean_B')\n",
     "    plt.fill_between(res['occ_level'], res['mean_B']-res['std_B'], res['mean_B']+res['std_B'], color='b', alpha=0.3, label='std_B')\n",
     "    plt.title('Blue channel')\n",
