Final version invented with only 1 epoch

--- a/Final version.ipynb
+++ b/Final version.ipynb
@@ -374,7 +374,8 @@
     "\n",
     "image_dir = \"crops_100K\"\n",
     "\n",
-    "\n",
+    "df_train = df_train.dropna()\n",
+    "df_test = df_test.dropna()\n",
     "df_train.head(-10)"
    ]
   },
